--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Memory Game</string>
+    <string name="app_name">Brain Trainer Memory Match</string>
     <string name="debug">regular</string>
     <string name="AppId">ca-app-pub-2287984365462163~1823066143</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 
 </resources>
